--- a/_posts/02cafe/2020-04-01-00869.html
+++ b/_posts/02cafe/2020-04-01-00869.html
@@ -1,3 +1,15 @@
+---
+#header:
+#image: /assets/images/image-1.JPG
+#caption: "Photo credit @kiinan (https://kiinan.github.io/)"
+#last_modified_at: 
+#categories: 
+#- FWARY
+#tags: 
+#- ファッション
+#- 海外セレブ
+#- インスタ
+#---
 <h1 class="site-banner__title">How To Backflush Your ガギア・クラシック＜Gaggia Classic＞</h1>                        
     </head>
 <body>
