--- a/_posts/2022-01-31-base.html
+++ b/_posts/2022-01-31-base.html
@@ -1,12 +1,3 @@
-kiinan.github.ioだけgitする
-
-ローカルでサイトを確認したい場合は、
-このディレクトリからターミナルを開いてbundle exec jekyll serveする
-（このディレクトリは、jekylleでできているので）
-
-本番は、github-pagesと繋がったクラウドフレアのfwary.comにある
-
-
 ---
 title: "キャンプ用品｜キャンプブログのリスト"
 header:
@@ -24,9 +15,8 @@ tags:
 <P>今回は、さっき買ってきた業務スーパーの食材をレシピと一緒に紹介したいと思います。</P>
 <P>今回の内容はこちら</P><P> ↓↓↓</P><P>
 <h1>業スー食材レシピ</h1><p> </p><p> </p><p></p><p></p>
-
 <img src="/assets/images/image-1.png" alt="fwary-com-photos">
-<img src="/assets/images/2021-11-01-01.JPG" alt="fwary-com-photos">
+
 
 
 <ol>
@@ -39,28 +29,12 @@ tags:
 
 <h2 id="i1" class="deco" >題名１２３４５６７８９１２３４５６７８９</h2><p> 
 <!-- excerpt-start -->
-投稿方法
-
-1: _post の中で内容をコピー、新しいファイルを作る
-
-2 ファイル名は2021-07-09-eigo.md にする
-
-3 モディファイを入れない
-
-4 タイトル、カテゴリ、タグは日語ok
-
-5 bundle exec jekyll serveしてcromeでhttp://127.0.0.1:4000/を確認する
-
-6 git はこちら　https://github.com/kiinan/kiinan.github.io　
-　クラウドフレア　https://dash.cloudflare.com/login
-
-ピンタレスト埋め込み
-ページに一つスクリプトを入れること。
-
+ここに記事を書く
 
 <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
 <p><a href="https://www.pinterest.com/pin/401805598012950532/" data-pin-do="embedPin" ></a></p>・
 
+<img src="/assets/images/2021-11-01-01.JPG" alt="fwary-com-photos">
 
 
 
@@ -86,3 +60,5 @@ tags:
         </p><p>便利なキャンプグッズ、簡単キャンプ飯レシピ、キャンプの持ち物を上手に整理する方法、おしゃれに見せるキャンプグッズなど
         </p><p>おしゃれにキャンプする上で役立つ情報をたくさんご紹介します☕️</P>
                     <!-- excerpt-end -->
+
+
