--- a/_posts/04KIDS/2022-02-02-daiso-worldmap.html
+++ b/_posts/04KIDS/2022-02-02-daiso-worldmap.html
@@ -1,23 +1,31 @@
-I"<p>こんにちは！　</p>
-<p>ワンオペ•ワーママのタカオ　です♪　</p>
-<p>今回は、さっきダイソー買ってきた学習用品の定番、世界地図をうちの活用方法と一緒に紹介したいと思います。</p>
-<p>今回の内容はこちら</p>
-<p> ↓↓↓</p>
-<p>
+---
+title: "知育学習｜ダイソーの世界地図を定番のトイレに貼って定期テスト対策"
+header:
+last_modified_at: 
+categories: 
+- KIDS
+tags: 
+- 中学社会
+- 定期テスト対策
+- ダイソー
+---
+<P>こんにちは！　</P><P>ワンオペ•ワーママのタカオ　です♪　</P>
+<P>今回は、さっきダイソー買ってきた学習用品の定番、世界地図をうちの活用方法と一緒に紹介したいと思います。</P>
+<P>今回の内容はこちら</P><P> ↓↓↓</P><P>
 <h1>ダイソーの世界地図を定番のトイレに貼って定期テスト対策</h1><p> </p><p> </p><p></p><p></p>
 
-<img src="/assets/images/2022-02-02-01.JPG" alt="fwary-com-photos" />
+<img src="/assets/images/2022-02-02-01.JPG" alt="fwary-com-photos">
 
 
 <ol>
-<p>目次</p><!-- excerpt-start 　題名とh2を連動させる-->
+<p>目次</p><!-- 題名とh2を連動させる-->
 <li><a href="#i1">中学生の社会で始まった世界地理</a></li>
 <li><a href="#i2">ダイソーの世界地図はこちら</a></li>
 <li><a href="#i3">うちでの使い方</a></li>
 <li><a href="#i4">まとめと感想</a></li>
 </ol>
 
-<h2 id="i1" class="deco">中学生の社会で始まった世界地理</h2>
+<h2 id="i1" class="deco" >中学生の社会で始まった世界地理</h2>
 <p> 
 <!-- excerpt-start -->
 今年はうちは、中学一年生がいます。今回は、ダイソーで世界地図を買ってきたので、そちらをレビューしたいと思います。中一の社会は、地理と歴史を単元ごとに交互に進めていく様になっているそうで、日本の地理、歴史(縄文、弥生とか)、世界地理、日本史(鎌倉時代辺り)の様な順番で1、2ヶ月かけて単元をすすんでいっているようです。</p>
@@ -42,7 +50,7 @@
 ダイソーで買ってきた世界地図がこちら
 </p>
 <p>
-<img src="/assets/images/2022-02-02-01.JPG" alt="fwary-daisoworldmap" />
+<img src="/assets/images/2022-02-02-01.JPG" alt="fwary-daisoworldmap">
 </p></p>
 <p>
 Ｂ５サイズで八つ折りになってました。やや硬めの紙素材でしっかりしています。経度緯度も書いてあります。</p>
@@ -53,9 +61,8 @@
 <p>日本製</p><p>MADE IN JAPAN</p>
 
 <p>サイズ約841mm×594mm </p>
-世界197ヵ国の国旗+国連旗入り</p>
-<p>&lt;/p&gt;</p>
-<p><img src="/assets/images/2022-02-02-02.JPG" alt="fwary-daisoworldmap" />
+世界197ヵ国の国旗+国連旗入り</p></p>
+<p><img src="/assets/images/2022-02-02-02.JPG" alt="fwary-daisoworldmap">
 <p>この地図は、2020年6月現在の内容を掲載しております</p>
 <p>●折りたたみ地図のため、折れ線が白化する場合があります</p>
 <p>●世界の国旗は、国際連盟加盟国及び日本外務省が承認している国197ヵ国及び国連旗を掲載しております。</p>
@@ -66,7 +73,7 @@
 <h2 id="i3" class="deco">うちでの使い方</h2><p>
 なかなかサイズは大きいです。ですので、定番のこちらに貼ってみました笑</p>
 <p>
-<img src="/assets/images/2022-02-02-03.JPG" alt="fwary-com-photos" /></p>
+<img src="/assets/images/2022-02-02-03.JPG" alt="fwary-com-photos"></p>
 <p>難点は、いつも南米と南極ばかり見てしまうこと笑。肝心のヨーロッパが見にくい笑</p>
 <p>扉に貼るには大きすぎるので、ロシアとアラスカの辺りで半分にカットするといいかもしれません。</p>
 <p>国旗もぱっと目に入ってくるので良いです。</p>
@@ -77,7 +84,7 @@
 ダイソーで購入した世界地図。良いものが安く買えてよかったです♪
 
 
-</p><p>いかがだったでしょうか。</p><p>このサイトでは、定番の知育学習や、人気のショップ、メーカーを巡って、最新の情報を集めて快適で楽しい学習方法を探しています。</p><p>子育てする上で役立つ情報をたくさんご紹介します☕️</p>
-                    
-</p></p></p>
-:ET
+</p><p>いかがだったでしょうか。</p><p>このサイトでは、定番の知育学習や、人気のショップ、メーカーを巡って、最新の情報を集めて快適で楽しい学習方法を探しています。</p><p>子育てする上で役立つ情報をたくさんご紹介します☕️</P>
+                    <!-- excerpt-end -->
+
+
